change some detail in profile avatar (get image, fix wrap when email get to long). add unkwown playlist image, Handle play track for playlist Item, Add popularPlaylists Section in home page, add setContext(of current playing track in audioPlayerSlice

--- a/src/components/Navbar/styles.scoped.scss
+++ b/src/components/Navbar/styles.scoped.scss
@@ -66,6 +66,7 @@
                     margin-top: 5px;
                     font-size: 1.2rem;
                     font-weight: 400;
+                    overflow-wrap: break-word;
                 }
             }
 
